--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<link rel="shortcut icon" id="favicon" href="favicon.png">
 	<meta name="author" content="The Community">
 	<link rel="canonical" href="https://healthy.engineering/" />
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Pacifico:400' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Pacifico:400' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript" src="jquery.onepage-scroll.min.js"></script>
   	<link href='onepage-scroll.css' rel='stylesheet' type='text/css'>
