--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 	    
       <section class="page1">
         <div class="page_container">
+		  <a name="1" />
           <h1>1. Don't be a shit.</h1>
           <h2>If your reasoning focuses on you then you may not be thinking as a team player.</h2>
 			<p>All code gets rewritten at some point.<br />
@@ -275,12 +276,13 @@
 	      <div class="page_container">
 			  <h1>3. Don't create unnecessary shit.</h1>
 			  <h2>Ask yourself; Do I need to build this? Would buying or borrowing make more sense?</h2>
-			  <p>A lot have problems already been solved, so, if you're solving a problem ask yourself what
-			  will be better than existing solutions? Can you buy or license a solution which will do everything
+			  <p>A lot have problems already been solved, so you should ask yourself at the start of any project what
+			  will make it better than existing solutions? Can you buy or license a solution which will do everything
 			  your need? Can you contribute to a project to make it a better fit for the problem you're trying to
-			  solve? </p>
-			  <p class="credit"><i>(That's the reason this was built with <a href="https://github.com/peachananr/onepage-scroll">
-				  One Page Scroll</a> created by <a href="http://www.thepetedesign.com">Pete R.</a>)</i></p>
+			  solve? If you're part of a team, and the only reason you can come up with is "Because I want to learn X",
+				  but no-one else does, refer to <a href="#1" onclick='$(".main").moveTo(1)'>guideline #1</a>.</p>
+			  <p class="credit"><i>(This reference was built with <a href="https://github.com/peachananr/onepage-scroll">
+				  One Page Scroll</a> created by <a href="http://www.thepetedesign.com">Pete R.</a> to avoid the creation of unnecessary shit)</i></p>
   	    </div>
       </section>
     </div>
