--- a/index.html
+++ b/index.html
@@ -276,10 +276,11 @@
 	      <div class="page_container">
 			  <h1>3. Don't create unnecessary shit.</h1>
 			  <h2>Ask yourself; Do I need to build this? Would buying or borrowing make more sense?</h2>
-			  <p>A lot have problems already been solved, so you should ask yourself at the start of any project what
-			  will make it better than existing solutions? Can you buy or license a solution which will do everything
-			  your need? Can you contribute to a project to make it a better fit for the problem you're trying to
-			  solve? If you're part of a team, and the only reason you can come up with is "Because I want to learn X",
+			  <p>A lot have problems already been solved, so you should ask yourself at the start of any project "If
+				  we build something new, what will make it better than existing solutions?". Could you buy or license
+				  a solution which will do everything you need? Can you contribute to a project to make it a better
+				  fit for the problem you're trying to solve? If you're part of a team, and the only reason you can
+				  come up with is "Because I want to learn X",
 				  but no-one else does, refer to <a href="#1" onclick='$(".main").moveTo(1)'>guideline #1</a>.</p>
 			  <p class="credit"><i>(This reference was built with <a href="https://github.com/peachananr/onepage-scroll">
 				  One Page Scroll</a> created by <a href="http://www.thepetedesign.com">Pete R.</a> to avoid the creation of unnecessary shit)</i></p>
