--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <section class="page1">
         <div class="page_container">
 		  <a name="1" />
-          <h1>1. Don't be a shit.</h1>
+          <h1>1. Think of your team.</h1>
           <h2>If your reasoning focuses on you then you may not be thinking as a team player.</h2>
 			<p>All code gets rewritten at some point.<br />
 				Don't be the person who is defensive over their code or their views just because it's their code or
@@ -263,7 +263,7 @@
 	    
 	    <section class="page2">
 	      <div class="page_container">
-          <h1>2. Give a shit.</h1>
+          <h1>2. Care about what you do.</h1>
 		  <h2>Make your team multi-threaded by unblocking others</h2>
 			  <p>Start your day seeing if what you're doing is the most efficient thing to get the team moving
 			  forwards. Are your colleagues waiting for someone to review their code? then go do it! Is someone
@@ -274,7 +274,7 @@
 	    
 	    <section class="page3">
 	      <div class="page_container">
-			  <h1>3. Don't create unnecessary shit.</h1>
+			  <h1>3. Don't create unnecessary code.</h1>
 			  <h2>Ask yourself; Do I need to build this? Would buying or borrowing make more sense?</h2>
 			  <p>A lot have problems already been solved, so you should ask yourself at the start of any project "If
 				  we build something new, what will make it better than existing solutions?". Could you buy or license
