--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 				  come up with is "Because I want to learn X",
 				  but no-one else does, refer to <a href="#1" onclick='$(".main").moveTo(1)'>guideline #1</a>.</p>
 			  <p class="credit"><i>(This reference was built with <a href="https://github.com/peachananr/onepage-scroll">
-				  One Page Scroll</a> created by <a href="http://www.thepetedesign.com">Pete R.</a> to avoid the creation of unnecessary shit)</i></p>
+				  One Page Scroll</a> created by <a href="http://www.thepetedesign.com">Pete R.</a> to avoid the creation of unnecessary code)</i></p>
   	    </div>
       </section>
     </div>
